New graph log algorithm and better separate JHgChangeset and UncommittedChangeset - working for root history